# 3DSlicerClassificator

./: LICENSE  README.md
ClassificationScore/: CMakeLists.txt
ClassificationScore/Classificator/: CMakeLists.txt  Classificator.py
ClassificationScore/Classificator/Resources/UI/: Classificator.ui
